--- a/ngosearch/templates/index.html
+++ b/ngosearch/templates/index.html
@@ -68,6 +68,8 @@
  	       	     <h1>l'm looking for..</h1>
  	       	     <form action="/search" method="get">
  	       	     	<input type="text" placeholder="Search here ..." name="q" onblur="if (this.value == 'Search here ...') {this.value = '';}">
+    				<!-- input type="text" placeholder="Search here ..." name="state" onblur="if (this.value == 'Search here ...') {this.value = '';}"-->
+    				
  	       	     	<input type="submit" class="ser" value="Search"><br>
  	       	      <!-- label class="checkbox" >
  	       	             <input type="checkbox" value="checked">
@@ -78,10 +80,10 @@
  	       	           Part Time/Casual/Freelance
  	       	      </label -->
  	       	      <!-- select name="state">
-					<option value="select your location"> Select your location</option>
-					<option value="saab">Rajasthan</option>
-					<option value="fiat">Madhya Pradesh</option>
-					<option value="audi">Uttar Pradesh</option>
+					<option value=""> Select your location</option>
+					<option value="Rajasthan">Rajasthan</option>
+					<option value="Madhya Pradesh">Madhya Pradesh</option>
+					<option value="Uttar Pradesh">Uttar Pradesh</option>
 				</select -->
  	       	     </form>                
  	       </div>
