"Minor changes on Serach Result page"

--- a/ngolist/templates/search/search.html
+++ b/ngolist/templates/search/search.html
@@ -88,7 +88,7 @@
 	  	 	  <h3> SEARCH RESULTS</h3>
 	  	 	 <div class="job-top">
 	  	 	  	    <div class="col-md-8 job-left">
-	  	 	  	  	     <h4> <b>Top Results below : </b></h4>
+	  	 	  	  	     <h4> <b>Showing {{ page.object_list|length }} of {{ page.paginator.count }} Results | Page {{ page.number }} of {{ page.paginator.num_pages }}</b></h4>
 	  	 	  	     </div>
 	  	 	  	   <div class="clearfix"> </div>
 	  	 	  </div>
