--- a/ngosearch/templates/index.html
+++ b/ngosearch/templates/index.html
@@ -1,84 +1,172 @@
-{% load staticfiles %} {% load compress %}
-
-<!DOC TYPE html>
-<html>
+ {% load staticfiles %}
+<!DOCTYPE html>
+<html lang="en">
 <head>
+
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="">
+<meta name="author" content="">
+
 <title>Search NGO's</title>
-<style>
-</style>
-<!-- Latest compiled and minified CSS -->
+
+<!-- Twitter Bootstrap -->
 <link rel="stylesheet"
 	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<style>
-.body{
-overflow-y:scroll;
-overflow-x:scroll;
-}
-.search {
-	
-	position: fixed;
-	top: 40%;
-	left: 50%;
-	width:100%;
-	/* bring your own prefixes */
-	transform: translate(-15%, -15%);
-}
 
-.container-body {
+<!-- Bootstrap Core CSS -->
+<link href="static/css/bootstrap.min.css" rel="stylesheet">
 
-	align: left;
-}
-</style>
+<!-- Custom CSS -->
+<link href="static/css/grayscale.css" rel="stylesheet">
+
+<!-- Custom Fonts -->
+<link href="static/font-awesome/css/font-awesome.min.css"
+	rel="stylesheet" type="text/css">
+<link
+	href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
+	rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700"
+	rel="stylesheet" type="text/css">
+
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
-<body>
-	<!--header start here-->
 
-	<div class="search" >
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
+	<!-- Navigation -->
+	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse"
+					data-target=".navbar-main-collapse">
+					<i class="fa fa-bars"></i>
+				</button>
+				<a class="navbar-brand page-scroll" href="#page-top"> <i
+					class="fa fa-play-circle"></i> <span class="light">Search</span>
+				</a>
+			</div>
 
-		<div>
-			<h1>l'm looking for..</h1>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div
+				class="collapse navbar-collapse navbar-right navbar-main-collapse">
+				<ul class="nav navbar-nav">
+					<!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+					<li class="hidden"><a href="#page-top"></a></li>
+					<li><a class="page-scroll" href="#about">About</a></li>
+
+					<li><a class="page-scroll" href="#contact">Contact</a></li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
 		</div>
+		<!-- /.container -->
+	</nav>
 
-		
-			<form action="/search" method="get" role="form" class="form-horizontal">
+	<!-- Intro Header -->
+	<header class="intro">
+		<div class="intro-body">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2">
+						<!-- <div class="form-control"> -->
+							<!-- <form action="/search" method="get">
 
-			
-				<div class="form-group">
-					 <div class="col-xs-4">
-						<input type="text"  class="form-control" id="focusedInput"
-							placeholder="NGO search here ..." name="q"
-							onblur="if (this.value == 'NGO search here ...') {this.value = '';}">
+								<input type="search" size="85" name="q"
+									placeholder="NGO search here ..." class="input-group">
+								<input type="submit" class="btn btn-warning" value="Search">
+
+
+
+
+							</form> -->
+
+							<form class="form-search" action="/search" method="get">
+							<input  size="85" style="line-height: 28px; color:#000;" name="q" type="text" placeholder="  Search NGO here">
+								<button type="submit" class="btn btn-primary">Search</button>
+							</form>
+						<!-- </div> -->
 					</div>
 				</div>
-				
-				<div class="form-group">
-				 <div class="col-sm-offset-0 col-sm-10">
-						<input type="submit" class="btn btn-default" value="Search"><br>
 			</div>
-				</div>
-			
-			</form>
-		
-
-
-
-
-
-
-		<div class="footer-h" >
-
-			<div class="footer-main">
-				<div class="col-md-3 footer-left">
-					<p class="data" style="text-align:center;">
-						<a href="https://en.wikipedia.org/wiki/User:Namansharma13"> About us </a> <span class="d"> </span>
-					</p>
-				</div>
-			</div>
-
-
 		</div>
-	</div>
+	</header>
+
+	<!-- About Section -->
+	<section id="about" class="container content-section-about text-center">
+		<div class="row">
+			<div class="col-lg-8 col-lg-offset-2">
+				<h2>About Us</h2>
+				<p>We help u connect with the thousands of NGO's. With our
+					strong database, you can search for NGO's with cities, states,
+					category etc.</p>
+				<p>May we help you with smiling one more individual.</p>
+				<p>You can find various NGO's here</p>
+			</div>
+		</div>
+	</section>
+
+
+
+	<!-- Contact Section -->
+	<section id="contact" class="container content-section-contact text-center">
+		<div class="row">
+			<div class="col-lg-8 col-lg-offset-2">
+				<h2>Contact Us</h2>
+				<p>Feel free to email us to provide some feedback on our
+					searches so we can improve and make he planet more smiling</p>
+				<p>
+					<a href="mailto:siddharthjhanwar@yahoo.in">Mail Here</a>
+				</p>
+				<ul class="list-inline banner-social-buttons">
+					<li><a href="https://twitter.com/jhanwarsid"
+						class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i>
+							<span class="network-name">Twitter</span></a></li>
+					<!-- <li><a
+						href="https://github.com/IronSummitMedia/startbootstrap"
+						class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i>
+							<span class="network-name">Github</span></a></li> -->
+					<li><a href="https://plus.google.com/+Startbootstrap/posts"
+						class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i>
+							<span class="network-name">facebook</span></a></li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<!-- Map Section -->
+	<div id="map"></div>
+
+	<!-- Footer -->
+	<footer>
+		<div class="container text-center">
+			<p>Copyright &copy; spreadsmiles.in 2015</p>
+		</div>
+	</footer>
+
+	<!-- jQuery -->
+	<script src="static/js/jquery.js"></script>
+
+	<!-- Bootstrap Core JavaScript -->
+	<script src="static/js/bootstrap.min.js"></script>
+
+	<!-- Plugin JavaScript -->
+	<script src="static/js/jquery.easing.min.js"></script>
+
+	<!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+	<script type="text/javascript"
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
+	<!-- Custom Theme JavaScript -->
+	<script src="static/js/grayscale.js"></script>
 
 </body>
+
 </html>
