--- a/ngolist/templates/search/search.html
+++ b/ngolist/templates/search/search.html
@@ -81,14 +81,14 @@
                    
                 </ul>
             </div>
-			<div class="navbar-header" style="padding-top:7px;">
+			<div class="navbar-header" >
 				<!-- <button type="button" class="navbar-toggle" data-toggle="collapse"
 					data-target=".navbar-main-collapse">
 					<i class="fa fa-bars"></i>
 				</button> -->
 				
 				<form class="form-search" action="/search" method="get">
-							<input  size="70" style="line-height: 28px; color:#000;" name="q" type="text" placeholder="  Search NGO here">
+							<input  size="70" style="line-height: 28px; color:#000; padding-left: 5px;" name="q" value="{{query}}"type="text" placeholder="Search NGO here">
 								<button type="submit" class="btn btn-primary">Search</button>
 							</form>
 				
