--- a/ngosearch/templates/index.html
+++ b/ngosearch/templates/index.html
@@ -87,19 +87,10 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<!-- <div class="form-control"> -->
-							<!-- <form action="/search" method="get">
-
-								<input type="search" size="85" name="q"
-									placeholder="NGO search here ..." class="input-group">
-								<input type="submit" class="btn btn-warning" value="Search">
-
-
-
-
-							</form> -->
+							
 
 							<form class="form-search" action="/search" method="get">
-							<input  size="85" style="line-height: 28px; color:#000;" name="q" type="text" placeholder="  Search NGO here">
+							<input  size="85" style="line-height: 28px; color:#000;padding-left: 5px;" name="q" type="text" placeholder="Search NGO here">
 								<button type="submit" class="btn btn-primary">Search</button>
 							</form>
 						<!-- </div> -->
