--- a/static/css/grayscale.css
+++ b/static/css/grayscale.css
@@ -14,6 +14,10 @@ body {
 	 background-attachment: fixed;
  
     background: url(../img/aboutus1.jpg) no-repeat center center scroll;
+        -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 html {
@@ -265,7 +269,11 @@ a:focus {
     padding-top: 100px;
     width: 100%;
     background: url(../img/hunger.jpg) no-repeat center center scroll;
-  	height: 100%;
+   height: 100%;
+       -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
    
 }
 
@@ -274,6 +282,10 @@ a:focus {
     width: 100%;
    height: 100%;
     background: url(../img/aboutus1.jpg) no-repeat center center scroll;
+        -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
    
 }
 
