--- a/ngolist/templates/search/search.html
+++ b/ngolist/templates/search/search.html
@@ -81,7 +81,7 @@
                    
                 </ul>
             </div>
-			<div class="navbar-header" >
+			<div class="navbar-header" style="padding-top:7px;">
 				<!-- <button type="button" class="navbar-toggle" data-toggle="collapse"
 					data-target=".navbar-main-collapse">
 					<i class="fa fa-bars"></i>
