--- a/ngosearch/templates/index.html
+++ b/ngosearch/templates/index.html
@@ -26,13 +26,13 @@
 	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
 <!-- Bootstrap Core CSS -->
-<link href="static/css/bootstrap.min.css" rel="stylesheet">
+<link href="{%static "css/bootstrap.min.css" %}" rel="stylesheet">
 
 <!-- Custom CSS -->
-<link href="static/css/grayscale.css" rel="stylesheet">
+<link href="{%static "css/grayscale.css" %}" rel="stylesheet">
 
 <!-- Custom Fonts -->
-<link href="static/font-awesome/css/font-awesome.min.css"
+<link href="{%static "font-awesome/css/font-awesome.min.css" %}"
 	rel="stylesheet" type="text/css">
 <link
 	href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
@@ -153,13 +153,13 @@
 	</footer>
 
 	<!-- jQuery -->
-	<script src="static/js/jquery.js"></script>
+	<script src="{%static "js/jquery.js" %}"></script>
 
 	<!-- Bootstrap Core JavaScript -->
-	<script src="static/js/bootstrap.min.js"></script>
+	<script src="{%static "js/bootstrap.min.js" %}"></script>
 
 	<!-- Plugin JavaScript -->
-	<script src="static/js/jquery.easing.min.js"></script>
+	<script src="{%static "js/jquery.easing.min.js" %}"></script>
 
 	<!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
 	<script type="text/javascript"
