--- a/ngosearch/templates/index.html
+++ b/ngosearch/templates/index.html
@@ -166,7 +166,7 @@
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
 	<!-- Custom Theme JavaScript -->
-	<script src="static/js/grayscale.js"></script>
+	<script src="{%static "js/grayscale.js" %}"></script>
 
 </body>
 
